setting width on image captions to fix non-wrapping text

--- a/modules/custom/cu_shortcodes/scss/cu_shortcodes.scss
+++ b/modules/custom/cu_shortcodes/scss/cu_shortcodes.scss
@@ -382,11 +382,13 @@ a.expand-title:focus {
     float: right;
     margin-left: 20px;
     max-width:50%;
+    width:240px;
   }
   .image-caption-left {
     float: left;
     margin-right: 20px;
     max-width:50%;
+    width:240px;
   }
 }
 .image-caption p {
